--- a/src/main/resources/static/publish.html
+++ b/src/main/resources/static/publish.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" th:href="@{/favicon.png}"/>
     <link rel="bookmark" th:href="@{/favicon.png}"/>
-    <title th:text="#{index.title}">不挂高数社区</title>
+    <title>发布</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
     <script src="bootstrap/js/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
@@ -51,40 +51,24 @@
         <ul class="navbar-nav justify-content-end">
             <!-- 语言切换 -->
             <li class="nav-item dropdown mx-2">
-                <a class="nav-link" href="#"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Language
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" th:href="@{/(l='zh-CN')}">中文</a>
-                    <a class="dropdown-item" th:href="@{/(l='en-US')}">English</a>
+                    <a class="dropdown-item" >中文</a>
+                    <a class="dropdown-item">English</a>
                 </div>
             </li>
 
-            <!-- 消息提醒待添加 -->
-            <li class="nav-item dropdown" th:if="${session.user != null}">
-                <a class="nav-link" href="#"
-                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="/image/icon/message.svg" width="28" height="28"/>
-                        [[#{index.message}]] <span class="badge badge-light">9</span>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#" th:text="#{index.myhome}">我的主页</a>
-                    <a class="dropdown-item" href="#" th:text="#{index.setting}">设置</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#" th:text="#{index.signout}">退出登陆</a>
-                </div>
-            </li>
 
             <!-- 发起 -->
             <li class="nav-item dropdown" th:if="${session.user != null}">
-
-                <a class="nav-link" href="#"
+                <a class="nav-link dropdown-toggle" href="#"
                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="/image/icon/publish.svg" width="30" height="30" />
-                   [[#{index.writePost}]]
+                    <button type="button" class="btn btn-light">[[#{index.writePost}]]</button>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/publish" id="publish-a" onclick="addLocaleUrl('publish-a')" th:text="#{index.issue}">问题</a>
+                    <a class="dropdown-item" href="#" th:text="#{index.issue}">问题</a>
                     <div class="dropdown-divider"></div>
 
                 </div>
@@ -95,26 +79,35 @@
                 <a class="nav-link dropdown-toggle" href="#"
                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img src="/image/head/boyhead.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                    [[${session.user.getUserName()}]]
+                    我
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#" th:text="#{index.myhome}">我的主页</a>
                     <a class="dropdown-item" href="#" th:text="#{index.setting}">设置</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/sign-out" id="sign-out-a" onclick="addLocaleUrl('sign-out-a')" th:text="#{index.signout}">退出登陆</a>
+                    <a class="dropdown-item" href="/sign-out" id="sign-out-a" onclick="addLocaleUrl('sign-out-a')" >退出登陆</a>
                 </div>
             </li>
 
         </ul>
-
         <ul style="color: transparent" class="navbar-nav justify-content-end" th:if="${session.user != null}">
-            <button type="button" class="btn btn-primary" style="color: transparent; background-color: transparent;border-color: transparent">Prima</button>
+            <button type="button" class="btn btn-primary" style="color: transparent; background-color: transparent;border-color: transparent">Primary</button>
         </ul>
-
-        <a  id="sign-in-a" href="/sign-in" th:if="${session.user == null}"><button onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2" th:text="#{index.signIn}">登陆</button></a>
-        <a id="sign-up-a" href="/sign-up" th:if="${session.user == null}"><button type="button" onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2" th:text="#{index.signup}">注册</button></a>
+        <a  id="sign-in-a" href="/sign-in"><button onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2" >登陆</button></a>
+        <a id="sign-up-a" href="/sign-up" ><button type="button" onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2">注册</button></a>
     </div>
 </nav>
+
+<div class="container">
+    <div class="row">
+        <div class="col-xl-9" style="background-color: black;">
+            1
+        </div>
+        <div class="col" style="background-color: red;">
+            2 of 2
+        </div>
+    </div>
+</div>
 
 <script src="/js/url.js" type="text/javascript"></script>
 </body>
