--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,19 +17,14 @@
         / / background-image: url("https://api.isoyu.com/bing_images.php");
             background-color: #efefef;
         }
-
-        .issue-right {
-            border-right-style: solid;
-            border-right-width: 1px;
-            border-right-color: #efefef;
-        }
     </style>
 </head>
+
 <body>
 <!-- 标题栏 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- 标题 logo 和 文本 -->
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="#">
         <img src="favicon.png" width="24" height="32" class="d-inline-block align-top" alt="">
         不挂高数社区
     </a>
@@ -41,7 +37,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto mx-2">
             <li class="nav-item active mx-2">
-                <a class="nav-link" href="/" th:text="#{index.home}">主页<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#" th:text="#{index.home}">主页<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active mx-2">
                 <a class="nav-link" href="#" th:text="#{index.lebel}">分类<span class="sr-only">(current)</span></a>
@@ -54,7 +50,9 @@
             <form class="form-inline my-2 my-lg-0 mx-2">
                 <input class="form-control mr-sm-2" type="search" th:placeholder="#{index.search.placeholder}"
                        aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" th:text="#{index.search}">搜索</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit"
+                        th:text="#{index.search}">搜索
+                </button>
             </form>
         </ul>
 
@@ -73,8 +71,8 @@
 
             <!-- 消息提醒待添加 -->
             <li class="nav-item dropdown" th:if="${session.user != null}">
-                <a class="nav-link" href="#"
-                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">
                     <img src="/image/icon/message.svg" width="28" height="28"/>
                     [[#{index.message}]] <span class="badge badge-light">9</span>
                 </a>
@@ -89,8 +87,8 @@
             <!-- 发起 -->
             <li class="nav-item dropdown" th:if="${session.user != null}">
 
-                <a class="nav-link" href="#"
-                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">
                     <img src="/image/icon/publish.svg" width="30" height="30"/>
                     [[#{index.writePost}]]
                 </a>
@@ -104,9 +102,10 @@
 
             <!-- 我 -->
             <li class="nav-item dropdown" th:if="${session.user != null}">
-                <a class="nav-link dropdown-toggle" href="#"
-                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="/image/head/boyhead.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    <img src="/image/head/boyhead.png" width="30" height="30" class="d-inline-block align-top"
+                         alt="">
                     [[${session.user.getUserName()}]]
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -127,12 +126,14 @@
         </ul>
 
         <a id="sign-in-a" href="/sign-in" th:if="${session.user == null}">
-            <button onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2"
+            <button
+                    onclick="addLocaleUrl('sign-in-a')" id="signInBtn" type="button" class="btn btn-primary mx-2"
                     th:text="#{index.signIn}">登陆
             </button>
         </a>
         <a id="sign-up-a" href="/sign-up" th:if="${session.user == null}">
-            <button type="button" onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2"
+            <button type="button"
+                    onclick="addLocaleUrl('sign-up-a')" class="btn btn-success mx-2"
                     th:text="#{index.signup}">注册
             </button>
         </a>
@@ -144,7 +145,6 @@
 </div>
 <div class="container" style="background-color: white;">
     <div class="row">
-        <!-- 左边 -->
         <div class="col-xl-9 mt-3 issue-right">
             <!-- 帖子列表头 -->
             <div class="container">
@@ -172,13 +172,16 @@
                         </ul>
                     </div>
                 </div>
-                <hr style="margin-top: 0%;">
             </div>
+            <hr style="margin-top: 0%;">
             <!-- 帖子 -->
-            <div th:each="question : ${questions}">
+            <div  th:each="question : ${test}">
+                <div th:text="${question}"></div>
+            </div>
+
+            <div>
                 <div class="media">
-                    <img class="align-self-center mr-3 img-fluid rounded-circle" th:src="${question.user.headUrl}"
-                         src="image/head/boyhead.png"
+                    <img class="align-self-center mr-3 img-fluid rounded-circle" th:src="@{question.user.headUrl}" src="image/head/boyhead.png"
                          style="max-width: 64px; height: auto; ">
                     <div class="media-body">
                         <h5 class="mt-0"><a class="link-to-text" href="#" th:text="${question.title}">中间对齐</a></h5>
@@ -190,16 +193,19 @@
                                 •<span th:text="${question.likeCount}">人数</span><span>人关注</span>
                                 •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
                                 •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
-                                •<span th:text="${question.alterTime}">人数</span><span>时间</span>
+                                •<span th:text="${question.lastTime}">人数</span><span>时间</span>
                             </span>
                         </p>
                     </div>
+
                 </div>
                 <hr/>
             </div>
+
+
         </div>
 
-        <!-- 右边 -->
+        <!-- 右侧显示 -->
         <div class="col">
             <br/>
             <p><a class="link-to-text" href="#"><span style="color: red">New!</span>&nbsp;新闻</a></p>
@@ -255,9 +261,11 @@
             </div>
         </div>
     </div>
-    <div class="container" style="height: 30px">
-    </div>
+</div>
+<div class="container" style="height: 30px">
+</div>
 
-    <script src="/js/url.js" type="text/javascript"></script>
+<script src="/js/url.js" type="text/javascript"></script>
 </body>
+
 </html>
